--- a/app/user/addcodesnippet/addCodeSnippet.html
+++ b/app/user/addcodesnippet/addCodeSnippet.html
@@ -2,13 +2,13 @@
     <form>
         <div class="row">&nbsp;</div>
         <div class="form-group col-md-2">
-            <label for="language">Language</label>
-            <select id="language" class="form-control" ng-model="language" title="Select Language">
+            <label for="language">Category</label>
+            <select id="language" class="form-control" ng-model="language" title="Select Category">
                 <option value="">Select</option>
                 <option ng-repeat="language in languages" value="{{language.languageName}}">{{language.languageName}}</option>
             </select>
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-md-8">
             <label for="title"> Title </label>
             <input id="title" class="form-control" type="text" ng-model="title">
         </div>
@@ -18,7 +18,7 @@
         </div>
         <div class="form-group col-md-10">
             <center>
-                <button type="button" class="btn btn-primary" ng-click="Submit();">Submit</button>
+                <button type="button" class="btn btn-primary" ng-click="addCodeSnippet();">Submit</button>
                  <button type="button" class="btn btn-primary" ng-click="Back();">Back</button>
             </center>
         </div>
