--- a/app/index.html
+++ b/app/index.html
@@ -52,9 +52,57 @@
             <div class="col-sm-2" ng-controller="languageController">
                 <div class="row">&nbsp;</div>
                 <h4><label><u>Filter by Category</u></label></h4>
-                <a href="" ng-repeat="language in languages" ng-click="GetCodeSnippetsByLanguage(language.languageName);">
-                    <h4><b>{{language.languageName}}</b></h4>
-                </a>
+
+                <div class="col-md-12">
+                    <div class="row"> 
+                        <button style="text-align:left" class="btn btn-primary col-md-12" type="button" data-toggle="collapse" data-target="#tools" aria-expanded="false" aria-controls="collapseExample">
+                            Tools
+                        </button>
+                    </div>
+                    <div class="collapse" id="tools">
+                        <div class="card card-body">
+                            <a href="" ng-repeat="tool in Tools" ng-click="GetCodeSnippetsByLanguage(tool.languageName);">
+                                <h4><b>{{tool.languageName}}</b></h4>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <button style="text-align:left" class="btn btn-primary col-md-12" type="button" data-toggle="collapse" data-target="#languages" aria-expanded="false" aria-controls="collapseExample">
+                            Languages
+                        </button>
+                    </div>
+                    <div class="collapse" id="languages">
+                            <div class="card card-body">
+                                <a href="" ng-repeat="language in Languages" ng-click="GetCodeSnippetsByLanguage(language.languageName);">
+                                    <h4><b>{{language.languageName}}</b></h4>
+                                </a>
+                            </div>
+                        </div>
+                    <div class="row">
+                        <button style="text-align:left" class="btn btn-primary col-md-12" type="button" data-toggle="collapse" data-target="#frameworks" aria-expanded="false" aria-controls="collapseExample">
+                            Frameworks
+                        </button>
+                    </div>
+                    <div class="collapse" id="frameworks">
+                            <div class="card card-body">
+                                <a href="" ng-repeat="framework in Frameworks" ng-click="GetCodeSnippetsByLanguage(framework.languageName);">
+                                    <h4><b>{{framework.languageName}}</b></h4>
+                                </a>
+                            </div>
+                        </div>
+                    <div class="row">
+                        <button style="text-align:left" class="btn btn-primary col-md-12" type="button" data-toggle="collapse" data-target="#libraries" aria-expanded="false" aria-controls="collapseExample">
+                            Libraries
+                        </button>
+                    </div>
+                    <div class="collapse" id="libraries">
+                            <div class="card card-body">
+                                <a href="" ng-repeat="library in Libraries" ng-click="GetCodeSnippetsByLanguage(library.languageName);">
+                                    <h4><b>{{library.languageName}}</b></h4>
+                                </a>
+                            </div>
+                        </div>
+                </div>
             </div>
             <div class="col-sm-10" style="background:#94cdc4">
                 <div ng-view></div>
