--- a/app/index.html
+++ b/app/index.html
@@ -101,6 +101,18 @@
                                     <h4><b>{{library.languageName}}</b></h4>
                                 </a>
                             </div>
+                    </div>
+                    <div class="row">
+                            <button style="text-align:left" class="btn btn-primary col-md-12" type="button" data-toggle="collapse" data-target="#others" aria-expanded="false" aria-controls="collapseExample">
+                                Others
+                            </button>
+                        </div>
+                        <div class="collapse" id="others">
+                                <div class="card card-body">
+                                    <a href="" ng-repeat="other in Others" ng-click="GetCodeSnippetsByLanguage(library.languageName);">
+                                        <h4><b>{{other.languageName}}</b></h4>
+                                    </a>
+                                </div>
                         </div>
                 </div>
             </div>
